--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tutorial proj",
   "main": "index.js",
   "scripts": {
-    "start":"node backend/server.js",
+    "start": "node backend/server.js",
     "server": "nodemon backend/server.js"
   },
   "author": "Thomas Bradford",
@@ -13,6 +13,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.2.6"
   },
   "devDependencies": {
